syntax = "proto3";

option java_multiple_files = true;
option java_package = "alluxio.client.file.cache.remote.net.service";
option java_outer_classname = "MetedataServiceManager";
option objc_class_prefix = "HLW";

package proto;

service MetedataService {
  rpc isExist(QueryRequest) returns (QueryResponse) {}
  rpc updateMetedata(UpdateInfoList) returns (UpdateResponse) {}
}

message QueryResponse {
  bool is_exist = 1;
  string ip = 2;
  int32 port = 3;
}

message QueryRequest {
  int64 file_id = 1;
  int64 begin = 2;
  int64 end = 3;
}

message UpdateInfo {
  string host = 1;
  int32 port = 2;
  fileInfo info = 3;
}

message fileInfo {
  int64 file_id = 3;
  int64 file_length = 4;
  int64 begin = 5;
  int64 end = 6;
}

message UpdateInfoList {
  repeated UpdateInfo infos = 1;
}

message UpdateResponse {
  bool isSucceed = 1;
  repeated fileInfo failed_data = 2;
}
